force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>The Project object contains all details related to approved proposals and work provided therein</description>
    <label>Project</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>