force-app/main/default/objects/Project__c/fields/Accounts_Receivable_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Receivable_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounts Receivable Reviewer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Accounts_Receivable_Reviewer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>