force-app/main/default/objects/Project__c/fields/BO_Tax_Cr_Cd__c.field-meta.xml
<CustomField>
    <fullName>BO_Tax_Cr_Cd__c</fullName>
    <label>BO Tax Cr Cd</label>
    <length>2</length>
    <type>Text</type>
</CustomField>