force-app/main/default/objects/Project__c/fields/Budget_and_Reporting_Code__c.field-meta.xml
<CustomField>
    <fullName>Budget_and_Reporting_Code__c</fullName>
    <label>Budget and Reporting Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>