force-app/main/default/objects/Project__c/fields/Budget_Year__c.field-meta.xml
<CustomField>
    <fullName>Budget_Year__c</fullName>
    <label>Budget Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>