force-app/main/default/objects/Project__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Date that the project will close</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>