force-app/main/default/objects/Project__c/fields/Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>Cost_Code__c</fullName>
    <label>PM Cost Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>