force-app/main/default/objects/Project__c/fields/Country_Code1__c.field-meta.xml
<CustomField>
    <fullName>Country_Code1__c</fullName>
    <formula>TEXT(Opportunity__r.Funding_Client__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>