force-app/main/default/objects/Project__c/fields/CRADA__c.field-meta.xml
<CustomField>
    <fullName>CRADA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRADA</label>
    <referenceTo>CRADA__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>