force-app/main/default/objects/Project__c/fields/EP_R_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>EP_R_Signed_Date__c</fullName>
    <label>EP&amp;R Signed Date</label>
    <type>Date</type>
</CustomField>