force-app/main/default/objects/Project__c/fields/Last_Cost_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Cost_Date__c</fullName>
    <label>Last Cost Date</label>
    <type>Date</type>
</CustomField>