force-app/main/default/objects/Project__c/fields/Market_Sector__c.field-meta.xml
<CustomField>
    <fullName>Market_Sector__c</fullName>
    <label>Market Sector Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rich Adams</fullName>
            </value>
            <value>
                <fullName>Air Force</fullName>
            </value>
            <value>
                <fullName>AF Air Combat Command</fullName>
            </value>
            <value>
                <fullName>AF Armstrong Labs</fullName>
            </value>
            <value>
                <fullName>Brooks AFB</fullName>
            </value>
            <value>
                <fullName>Air Force Evolving</fullName>
            </value>
            <value>
                <fullName>AF Materiel Command Headquarters</fullName>
            </value>
            <value>
                <fullName>AF Materiel Command</fullName>
            </value>
            <value>
                <fullName>AF All other AFMC</fullName>
            </value>
            <value>
                <fullName>AF Ogden ALC</fullName>
            </value>
            <value>
                <fullName>AF Oklahoma ALC</fullName>
            </value>
            <value>
                <fullName>AF All Other Air Force</fullName>
            </value>
            <value>
                <fullName>AF Phillips Laboratory</fullName>
            </value>
            <value>
                <fullName>AF Research Labs</fullName>
            </value>
            <value>
                <fullName>AF Sacramento ALC</fullName>
            </value>
            <value>
                <fullName>AF Wright Labs</fullName>
            </value>
            <value>
                <fullName>AF Warner Robins ALC</fullName>
            </value>
            <value>
                <fullName>Agriculture and Food</fullName>
            </value>
            <value>
                <fullName>AgFood</fullName>
            </value>
            <value>
                <fullName>APD Evolving</fullName>
            </value>
            <value>
                <fullName>Army/Marines</fullName>
            </value>
            <value>
                <fullName>Army Materiel Command</fullName>
            </value>
            <value>
                <fullName>Army Chem/BIO Defense</fullName>
            </value>
            <value>
                <fullName>Army Chem/Bio Def Command</fullName>
            </value>
            <value>
                <fullName>Army Other Chem/Bio Clients</fullName>
            </value>
            <value>
                <fullName>Army Corps of Engineers</fullName>
            </value>
            <value>
                <fullName>Army Chemical Weapons Demilitarization</fullName>
            </value>
            <value>
                <fullName>Army Evolving</fullName>
            </value>
            <value>
                <fullName>Army Environmental</fullName>
            </value>
            <value>
                <fullName>Marines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>