force-app/main/default/objects/Project__c/fields/Market_Sector_pnnl__c.field-meta.xml
<CustomField>
    <fullName>Market_Sector_pnnl__c</fullName>
    <formula>TEXT(Account__r.Market_Sector_Title__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Sector</label>
    <type>Text</type>
</CustomField>