force-app/main/default/objects/Project__c/fields/Official_User_Only__c.field-meta.xml
<CustomField>
    <fullName>Official_User_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Official User Only-</label>
    <type>Checkbox</type>
</CustomField>