force-app/main/default/objects/Project__c/fields/PM_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>PM_Employee_ID__c</fullName>
    <formula>$User.FederationIdentifier</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Employee ID</label>
    <type>Text</type>
</CustomField>