force-app/main/default/objects/Project__c/fields/PNNL_Contract__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PNNL Contract</description>
    <label>Report Contract Number</label>
    <referenceTo>PNNL_Contracts__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>