force-app/main/default/objects/Project__c/fields/PNSO_Proposal_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Proposal_Reviewer__c</fullName>
    <label>PNSO Proposal Reviewer</label>
    <length>25</length>
    <type>Text</type>
</CustomField>