force-app/main/default/objects/Project__c/fields/PPM_Project__c.field-meta.xml
<CustomField>
    <fullName>PPM_Project__c</fullName>
    <label>PPM Project #</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>