force-app/main/default/objects/Project__c/fields/PPM_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>PPM_Project_Status__c</fullName>
    <inlineHelpText>Provides current status of the project ex: Active</inlineHelpText>
    <label>PPM Project Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>