force-app/main/default/objects/Project__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Project Management Office</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>