force-app/main/default/objects/Project__c/fields/Project_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Account_Number__c</fullName>
    <label>Project Account Number</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Report_Period__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D5000 - DOE Financial Plan</fullName>
            </value>
            <value>
                <fullName>D5005 - DOE Related Serv Projects</fullName>
            </value>
            <value>
                <fullName>D5008 - Bonneville Power Admin</fullName>
            </value>
            <value>
                <fullName>D5009 - Non-IC Reimbursable Work</fullName>
            </value>
            <value>
                <fullName>D5010 - Related Services-Non DOE (SPP)</fullName>
            </value>
            <value>
                <fullName>D5012 - Joint Appointments-Out</fullName>
            </value>
            <value>
                <fullName>D5013 - Joint Appointment Out - ACT</fullName>
            </value>
            <value>
                <fullName>D5015 - Homeland Security</fullName>
            </value>
            <value>
                <fullName>D5040 - ACT Federal</fullName>
            </value>
            <value>
                <fullName>D5908 - DOE Sites Cap</fullName>
            </value>
            <value>
                <fullName>D5909 - Line Item Construction Projects</fullName>
            </value>
            <value>
                <fullName>D5910 - Construction Work in Prog GF</fullName>
            </value>
            <value>
                <fullName>D5911 - Equipment Work in Prog  GF</fullName>
            </value>
            <value>
                <fullName>D5912 - Construction Work in Prog</fullName>
            </value>
            <value>
                <fullName>D5913 - Equipment Work in Progress</fullName>
            </value>
            <value>
                <fullName>D5915 - Equipment Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>