force-app/main/default/objects/Project__c/fields/Project_Management_Office_pnnl__c.field-meta.xml
<CustomField>
    <fullName>Project_Management_Office_pnnl__c</fullName>
    <formula>Account__r.Project_Management_Office__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Management Office</label>
    <type>Text</type>
</CustomField>