force-app/main/default/objects/Project__c/fields/Project_Manager2__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager2__c</fullName>
    <formula>Opportunity__r.Project_Manager__r.FirstName + &quot; &quot; + Opportunity__r.Project_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Project Manager assigned in Proposal</inlineHelpText>
    <label>Project Manager</label>
    <type>Text</type>
</CustomField>