force-app/main/default/objects/Project__c/fields/Project_Title2__c.field-meta.xml
<CustomField>
    <fullName>Project_Title2__c</fullName>
    <formula>Opportunity__r.Project_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Title</label>
    <type>Text</type>
</CustomField>