force-app/main/default/objects/Project__c/fields/Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Project_Title__c</fullName>
    <label>Project Title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>