force-app/main/default/objects/Project__c/fields/Report_Class__c.field-meta.xml
<CustomField>
    <fullName>Report_Class__c</fullName>
    <label>Report Class</label>
    <length>3</length>
    <type>Text</type>
</CustomField>