force-app/main/default/objects/Project__c/fields/Report_Contract_Number1__c.field-meta.xml
<CustomField>
    <fullName>Report_Contract_Number1__c</fullName>
    <label>Report Contract Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>