force-app/main/default/objects/Project__c/fields/Report_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Report_Contract_Number__c</fullName>
    <formula>Opportunity__r.Contract.ContractNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Contract Number</label>
    <type>Text</type>
</CustomField>