force-app/main/default/objects/Project__c/fields/Report_Period__c.field-meta.xml
<CustomField>
    <fullName>Report_Period__c</fullName>
    <label>Report Period</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Account_Number__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FY</fullName>
            </value>
            <value>
                <fullName>TD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>