force-app/main/default/objects/Project__c/fields/ReportClass__c.field-meta.xml
<CustomField>
    <fullName>ReportClass__c</fullName>
    <formula>Opportunity__r.Report_Class__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Class</label>
    <type>Text</type>
</CustomField>