force-app/main/default/objects/Project__c/fields/Responsible_Org__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Org__c</fullName>
    <label>Responsible Org</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>