force-app/main/default/objects/Project__c/fields/Risk_Last_Approved__c.field-meta.xml
<CustomField>
    <fullName>Risk_Last_Approved__c</fullName>
    <label>Risk Last Approved</label>
    <type>Date</type>
</CustomField>