force-app/main/default/objects/Project__c/fields/Scope_Num__c.field-meta.xml
<CustomField>
    <fullName>Scope_Num__c</fullName>
    <label>Scope #</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>