force-app/main/default/objects/Project__c/fields/ScopeNumber__c.field-meta.xml
<CustomField>
    <fullName>ScopeNumber__c</fullName>
    <formula>Opportunity__r.Scope__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope Number</label>
    <type>Text</type>
</CustomField>