force-app/main/default/objects/Project__c/fields/Setup_Date__c.field-meta.xml
<CustomField>
    <fullName>Setup_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Setup Date</label>
    <type>Date</type>
</CustomField>