force-app/main/default/objects/Project__c/fields/Special_Reporting_Funds1__c.field-meta.xml
<CustomField>
    <fullName>Special_Reporting_Funds1__c</fullName>
    <label>Special Reporting Funds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BIL</fullName>
            </value>
            <value>
                <fullName>IRA</fullName>
            </value>
            <value>
                <fullName>IIJA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>