force-app/main/default/objects/Project__c/fields/Special_Reporting_Funds__c.field-meta.xml
<CustomField>
    <fullName>Special_Reporting_Funds__c</fullName>
    <formula>TEXT(Opportunity__r.Special_Reporting_Funds__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Reporting Funds</label>
    <type>Text</type>
</CustomField>