force-app/main/default/objects/Project__c/recordTypes/Project_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Project_Record_Type</fullName>
    <active>true</active>
    <label>Project Record Type</label>
</RecordType>