force-app/main/default/objects/Project__c/validationRules/Budget_Year_Must_Be_YYYY.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_Year_Must_Be_YYYY</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNUMBER(Budget_Year__c))</errorConditionFormula>
    <errorDisplayField>Budget_Year__c</errorDisplayField>
    <errorMessage>Your entry does not match the allowed format YYYY.</errorMessage>
</ValidationRule>