force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ScopeNumber__c</columns>
    <columns>Account__c</columns>
    <columns>Project_Title2__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Inactive_Date__c</columns>
    <columns>Report_Contract_Number__c</columns>
    <columns>Project_Manager2__c</columns>
    <columns>Responsible_Org__c</columns>
    <columns>Product_Line__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
</ListView>