force-app/main/default/objects/Project__c/listViews/Funding_Action_Queue_Project.listView-meta.xml
<ListView>
    <fullName>Funding_Action_Queue_Project</fullName>
    <filterScope>Queue</filterScope>
    <label>Funding Action Queue</label>
    <queue>Funding_Action_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>